welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:7: error: Int does not take parameters
	return valMoyenne/nums.length()
                                     ^